--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,60 @@
 body {
-    background-color: azure;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 18px;
+  background-color: azure;
+  font-family: 'Patrick Hand', cursive;
+  font-size: 18px;
+}
+
+button {
+  margin: 8px 0 0 15px;
+  padding: 3px 8px 3px 8px;
+  border: 4px solid black;
+  font-family: 'Patrick Hand', cursive;
+  font-weight: 600;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+table {
+  padding: 3px;
+  width: 350px;
+  border: 4px solid black;
+}
+
+input {
+  margin: 8px 0 0 15px;
+  padding: 3px 8px 3px 8px;
+  border: 4px solid black;
+  font-family: 'Patrick Hand', cursive;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.layout {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-bottom: 25px;
+}
+
+.heading {
+  width: 350px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.left {
+  margin-right: 50px;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
